overflow x fix for scroll content

--- a/app/assets/stylesheets/instances/_media-card.css.scss
+++ b/app/assets/stylesheets/instances/_media-card.css.scss
@@ -298,7 +298,8 @@
     .media-card-caption {
         text-align: left;
         max-height: 50%;
-        overflow: scroll;        
+        overflow: scroll;
+        overflow-x: hidden;        
     }
 }
 
